--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^3.0.1",
+    "@fontsource/anaheim": "^4.5.7",
+    "@fontsource/montserrat-alternates": "^4.5.11",
+    "@fontsource/rubik-mono-one": "^4.5.10",
     "astro": "^2.0.17",
     "tailwindcss": "^3.2.7"
   }
